LU-25 Remove blocking network request from ldlm shrinker

- Change the LDLM_SYNC to LDLM_ASYNC in ldlm_cli_pool_shrink();
- Backport ldlm_prepare_lru_list() from master to avoid blocking cancel in
  ldlm_cli_pool_shrink();

Issue:
Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: Ib503e1d246330b13ea266d24faa2db68faa49160