lustre/ldlm/ldlm_lockd.c
@@ -2019,10 +2019,14 @@ static int ldlm_bl_thread_main(void *arg)
                         libcfs_memory_pressure_set();
 
                 if (blwi->blwi_count) {
+                        int count;
                         /* The special case when we cancel locks in lru
                          * asynchronously, we pass the list of locks here.
                          * Thus lock is marked LDLM_FL_CANCELING, and already
                          * canceled locally. */
+                        count = ldlm_cancel_list(&blwi->blwi_head,
+                                                 blwi->blwi_count,
+                                                 LDLM_FL_BL_AST);
                         ldlm_cli_cancel_list(&blwi->blwi_head,
                                              blwi->blwi_count, NULL, 0);
                 } else {
@@ -2450,6 +2454,7 @@ EXPORT_SYMBOL(ldlm_namespace_foreach_res);
 EXPORT_SYMBOL(ldlm_resource_iterate);
 EXPORT_SYMBOL(ldlm_cancel_resource_local);
 EXPORT_SYMBOL(ldlm_cli_cancel_list);
+EXPORT_SYMBOL(ldlm_cancel_list);
 
 /* ldlm_lockd.c */
 EXPORT_SYMBOL(ldlm_server_blocking_ast);
